Fixing it not working on mobile

--- a/src/components/SeeAllButton/SeeAllButton.less
+++ b/src/components/SeeAllButton/SeeAllButton.less
@@ -9,9 +9,9 @@
 	z-index: 1;
 	position: relative;
 	font-weight: 500;
-	height: 2rem;
 	text-decoration: none;
 	margin: 0 auto;
+	margin-top: 2rem !important;
 
 	&:hover {
 		color: var(--primary);
