--- a/src/components/SeeLessButton/SeeLessButton.less
+++ b/src/components/SeeLessButton/SeeLessButton.less
@@ -30,3 +30,8 @@
 		display: none;
 	}
 }
+
+
+.see-less-btn {
+	display: none;
+}
